--- a/src/components/home.module.css
+++ b/src/components/home.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 100vw;
   height: 100vh;
-  padding: 2vh 1vw;
+  padding: 4vw;
   color: #e6ecf0;
   display: flex;
   flex-direction: column;
@@ -16,6 +16,13 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+}          
+.tier h1 {
+  margin: 0;
+  padding-top: 1vh;
+  color: #2e1702;
+  font-size:20px;
+  font-weight:600;
 }   
 .tier div h2 {
   width: 100%;
@@ -51,15 +58,30 @@
 
 .oabtext {
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
   text-align: center;
-  margin-top:6vh;
-}        
-.oabtext h1 {
-  width: 100%;
+  margin-top:2vh;
+} 
+
+.states {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  margin-right: 10px;
+  color: #2e1702;
+  font-size:16px;
+  font-weight:600;
+}
+
+.areas {
+  display: flex;
   margin: 0;
   padding: 0;
   color: #2e1702;
-  font-size:20px;
+  font-size:16px;
   font-weight:600;
 }
 
