--- a/src/components/home.module.css
+++ b/src/components/home.module.css
@@ -1,15 +1,17 @@
 .container {
   width: 100vw;
   height: 100vh;
-  padding: 4vw;
+  padding: 0 20vw;
   color: #e6ecf0;
   display: flex;
   flex-direction: column;
-  margin-top: 5vh;
+  margin-top: 6vh;
 }
 
 .tier {
   width: 100%;
+  max-width: 1100px;
+  margin: 0vh 0 2vh;
   color: #e6ecf0;
   display: flex;
   flex-direction: row;
@@ -18,8 +20,7 @@
   flex-wrap: wrap;
 }          
 .tier h1 {
-  margin: 0;
-  padding-top: 1vh;
+  margin: 2vh 0 0;
   color: #2e1702;
   font-size:20px;
   font-weight:600;
@@ -44,7 +45,7 @@
   border-radius:4px;
   color:#ffffff;
   background: #c96c15;
-  margin:0px 5px;
+  margin:0 5px;
   padding:14px 14px;
 }
 .button:hover {
@@ -63,11 +64,11 @@
   align-content: center;
   justify-content: center;
   text-align: center;
-  margin-top:2vh;
+  margin: 2vh 0 0;
 } 
 
 .states {
-  display: flex;
+  width: 22vw;
   margin: 0;
   padding: 0;
   margin-right: 10px;
@@ -77,7 +78,16 @@
 }
 
 .areas {
-  display: flex;
+  width: 78vw;
+  margin: 0;
+  padding: 0;
+  color: #2e1702;
+  font-size:16px;
+  font-weight:600;
+}
+
+.honoraries {
+  width: 100vw;
   margin: 0;
   padding: 0;
   color: #2e1702;
@@ -87,12 +97,27 @@
 
 .oablogo {
   width: 60px;
-  padding-top: 4px;
   margin-right: 2rem;
 }
 
 .rrlogo {
   width: 36px;
-  padding-top: 4px;
   margin-left: 2rem;
 }
+
+
+/* ------------- */
+
+
+@media (max-width: 900px) { 
+}
+
+@media (max-width: 1100px) { 
+  .container {
+    padding: 4vw 4vw;
+  }
+  .tier {
+    max-width: 1100px;
+  }
+}
+  
