--- a/src/components/home.module.css
+++ b/src/components/home.module.css
@@ -5,7 +5,7 @@
   color: #e6ecf0;
   display: flex;
   flex-direction: column;
-  margin-top: 6vh;
+  margin-top: 5vh;
 }
 
 .tier {
@@ -36,9 +36,9 @@
 
 .button {
   cursor:pointer;
-  width: 30%;
-  height: 1rem;
-  max-width: 100px;
+  width: 36%;
+  height: 3rem;
+  max-width: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -88,6 +88,7 @@
 
 .honoraries {
   width: 100vw;
+  height: 54vh;
   margin: 0;
   padding: 0;
   color: #2e1702;
@@ -118,6 +119,10 @@
   }
   .tier {
     max-width: 1100px;
+  }
+  .button {
+    width: 36%;
+    max-width: 180px;
   }
 }
   
