create data select controls

--- a/src/utils/honoraries.module.css
+++ b/src/utils/honoraries.module.css
@@ -69,14 +69,14 @@
 
 /* USAR APENAS PARA DEMOSTRAÇÂO */
 .title {
-  background: #a5a4a7;
+  background: #c96c15;
   padding: 5px;
   text-align: center;
   margin: 2px 0;
   color: #fff;
 }
 .line {
-  background: #e1e0e2;
+  background: #f7d2ae;
   padding: 5px;
   text-align: center;
   margin: 2px 0;
