--- a/src/components/home.module.css
+++ b/src/components/home.module.css
@@ -86,6 +86,15 @@
   font-weight:600;
 }
 
+.actions {
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  color: #2e1702;
+  font-size:16px;
+  font-weight:600;
+}
+
 .honoraries {
   width: 100vw;
   height: 54vh;
